--- a/index.html
+++ b/index.html
@@ -77,13 +77,20 @@
 <!-- banner -->
 	<div class="banner"><div class="container">
 		<ul class="banner_top">
-			<li class="move"><img src="img/banner/1.jpg" alt=""></li>
-			<li><img src="img/banner/2.jpg" alt=""></li>
-			<li><img src="img/banner/3.jpg" alt=""></li>
-			<li><img src="img/banner/4.jpg" alt=""></li>
-			<li><img src="img/banner/5.jpg" alt=""></li>
+			<li class="list move"><a href=""><img src="img/banner/1.jpg" alt=""></a></li>
+			<li class="list"><a href=""><img src="img/banner/2.jpg" alt=""></a></li>
+			<li  class="list"><a href=""><img src="img/banner/3.jpg" alt=""></a></li>
+			<li  class="list"><a href=""><img src="img/banner/4.jpg" alt=""></a></li>
+			<li  class="list"><a href=""><img src="img/banner/5.jpg" alt=""></a></li>
 			<div class="left"><i class="iconfont">&#xe779;</i></div>
 			<div class="right"><i class="iconfont">&#xe666;</i></div>
+			<ul class="dian">
+				<li class="d active"></li>
+				<li class="d"></li>
+				<li class="d"></li>
+				<li class="d"></li>
+				<li class="d"></li>
+			</ul>
 		</ul>
 		<div class="box">
 			<div class="zz">
@@ -1832,81 +1839,130 @@
 								<p class="price">29.37元</p>
 								<div class="img"><a href=""><img src="img/xia/3.jpg" alt=""></a></div>
 							</li>
+							<div class="left"><i class="iconfont">&#xe779;</i></div>
+							<div class="right"><i class="iconfont">&#xe666;</i></div>
+							<div class="dian">
+								<span class="dd dot"></span>
+								<span class="dd"></span>
+								<span class="dd"></span>
+							</div>
 						</ul>
 					</div>
 				</li>
-				<li class="t1" style="border-top:1px solid #FFAC13">
-					<h1>图书</h1>
+				<li class="t1" style="border-top:1px solid #83C44E">
+					<h1 style="color: #83C44E" >MIUI主题</h1>
 					<div class="xm">
 						<ul>
 							<li class="appear">
-								<h4 ><a href="">哈利·波特与被诅咒的孩子</a></h4>
-								<p class="desc">“哈利·波特”第八个故事中文版震撼来袭！特别彩排版剧本！ </p>
-								<p class="price">29.37元</p>
-								<div class="img"><a href=""><img src="img/xia/1.png" alt=""></a></div>
+								<h4 ><a href="">大白-戳戳我抱抱你</a></h4>
+								<p class="desc">大白(●—●)吧啦啦啦~小米主题和迪士尼首度合作，打造精品迪士尼系列主题 </p>
+								<p class="price">15米币</p>
+								<div class="img"><a href=""><img src="img/xia/1/1.png" alt=""></a></div>
 							</li>
 							<li>
-								<h4 ><a href="">哈利·波特与被诅咒的孩子</a></h4>
-								<p class="desc">“哈利·波特”第八个故事中文版震撼来袭！特别彩排版剧本！ </p>
+								<h4 ><a href="">主题</a></h4>
+								<p class="desc">众多个性主题、百变锁屏与自由桌面让你的手机与众不同！ </p>
 								<p class="price">29.37元</p>
-								<div class="img"><a href=""><img src="img/xia/2.png" alt=""></a></div>
+								<div class="img"><a href=""><img src="img/xia/2/2.png" alt=""></a></div>
 							</li>
 							<li>
-								<h4 ><a href="">哈利·波特与被诅咒的孩子</a></h4>
-								<p class="desc">“哈利·波特”第八个故事中文版震撼来袭！特别彩排版剧本！ </p>
-								<p class="price">29.37元</p>
-								<div class="img"><a href=""><img src="img/xia/3.jpg" alt=""></a></div>
+								<h4 ><a href="">米奇-有你有我</a></h4>
+								<p class="desc">米奇来啦！小米主题和迪士尼首度合作，打造精品迪士尼系列主题</p>
+								<p class="price">21米币</p>
+								<div class="img"><a href=""><img src="img/xia/1/3.png" alt=""></a></div>
 							</li>
+							<li>
+								<h4 ><a href="">钢铁侠-科技控</a></h4>
+								<p class="desc">I'm Iron Man! 小米主题和迪士尼首度合作，打造精品漫威系列主题</p>
+								<p class="price">12米币</p>
+								<div class="img"><a href=""><img src="img/xia/2/1.png" alt=""></a></div>
+							</li>
+							<div class="left"><i class="iconfont">&#xe779;</i></div>
+							<div class="right"><i class="iconfont">&#xe666;</i></div>
+							<div class="dian">
+								<span class="dd dot"></span>
+								<span class="dd"></span>
+								<span class="dd"></span>
+								<span class="dd"></span>
+							</div>
 						</ul>
 					</div>
 				</li>
-				<li class="t1" style="border-top:1px solid #FFAC13">
-					<h1>图书</h1>
+				<li class="t1" style="border-top:1px solid #E53935">
+					<h1 style="color:#E53935 ">游戏</h1>
 					<div class="xm">
 						<ul>
 							<li class="appear">
-								<h4 ><a href="">哈利·波特与被诅咒的孩子</a></h4>
-								<p class="desc">“哈利·波特”第八个故事中文版震撼来袭！特别彩排版剧本！ </p>
+								<h4 ><a href="">小米超神</a></h4>
+								<p class="desc">有实力，一起团！</p>
 								<p class="price">29.37元</p>
-								<div class="img"><a href=""><img src="img/xia/1.png" alt=""></a></div>
+								<div class="img"><a href=""><img src="img/xia/2/1.png" alt=""></a></div>
+							</li>
+							<li>
+								<h4 ><a href="">小米枪战</a></h4>
+								<p class="desc">组好队 去跳伞！！ </p>
+								<p class="price">免费</p>
+								<div class="img"><a href=""><img src="img/xia/2/2.png" alt=""></a></div>
 							</li>
 							<li>
 								<h4 ><a href="">哈利·波特与被诅咒的孩子</a></h4>
-								<p class="desc">“哈利·波特”第八个故事中文版震撼来袭！特别彩排版剧本！ </p>
-								<p class="price">29.37元</p>
-								<div class="img"><a href=""><img src="img/xia/2.png" alt=""></a></div>
+								<p class="desc">在电脑上玩遍小米所有手游 </p>
+								<p class="price">免费</p>
+								<div class="img"><a href=""><img src="img/xia/2/3.png" alt=""></a></div>
 							</li>
 							<li>
-								<h4 ><a href="">哈利·波特与被诅咒的孩子</a></h4>
-								<p class="desc">“哈利·波特”第八个故事中文版震撼来袭！特别彩排版剧本！ </p>
-								<p class="price">29.37元</p>
-								<div class="img"><a href=""><img src="img/xia/3.jpg" alt=""></a></div>
+								<h4 ><a href="">点击进入小米游戏商店</a></h4>
+								<p class="desc">免费下载海量的手机游戏天天都有现金福利赠送 </p>
+								<p class="price">免费</p>
+								<div class="img"><a href=""><img src="img/xia/2/4.jpg" alt=""></a></div>
 							</li>
+							<div class="left"><i class="iconfont">&#xe779;</i></div>
+							<div class="right"><i class="iconfont">&#xe666;</i></div>
+							<div class="dian">
+								<span class="dd dot"></span>
+								<span class="dd"></span>
+								<span class="dd"></span>
+								<span class="dd"></span>
+							</div>
 						</ul>
 					</div>
 				</li>
-				<li class="t1 hou" style="border-top:1px solid #FFAC13">
-					<h1>图书</h1>
+				<li class="t1" style="border-top:1px solid #2196F3">
+					<h1 style="color: #2196F3">应用</h1>
 					<div class="xm">
 						<ul>
 							<li class="appear">
-								<h4 ><a href="">哈利·波特与被诅咒的孩子</a></h4>
-								<p class="desc">“哈利·波特”第八个故事中文版震撼来袭！特别彩排版剧本！ </p>
-								<p class="price">29.37元</p>
-								<div class="img"><a href=""><img src="img/xia/1.png" alt=""></a></div>
+								<h4 ><a href="">2017金米奖</a></h4>
+								<p class="desc">最优秀的应用和游戏</p>
+								<p class="price">免费</p>
+								<div class="img"><a href=""><img src="img/xia/3/1.png" alt=""></a></div>
 							</li>
 							<li>
-								<h4 ><a href="">哈利·波特与被诅咒的孩子</a></h4>
-								<p class="desc">“哈利·波特”第八个故事中文版震撼来袭！特别彩排版剧本！ </p>
-								<p class="price">29.37元</p>
-								<div class="img"><a href=""><img src="img/xia/2.png" alt=""></a></div>
+								<h4 ><a href="">Forest</a></h4>
+								<p class="desc">帮助您专心于生活中每个重要时刻</p>
+								<p class="price">免费</p>
+								<div class="img"><a href=""><img src="img/xia/3/2.png" alt=""></a></div>
 							</li>
 							<li>
-								<h4 ><a href="">哈利·波特与被诅咒的孩子</a></h4>
-								<p class="desc">“哈利·波特”第八个故事中文版震撼来袭！特别彩排版剧本！ </p>
-								<p class="price">29.37元</p>
-								<div class="img"><a href=""><img src="img/xia/3.jpg" alt=""></a></div>
+								<h4 ><a href="">小米应用</a></h4>
+								<p class="desc">小米出品 必属精品</p>
+								<p class="price">免费</p>
+								<div class="img"><a href=""><img src="img/xia/3/3.jpg" alt=""></a></div>
 							</li>
+							<li>
+								<h4 ><a href="">小米应用</a></h4>
+								<p class="desc">帮助小米手机和其他安卓手机用户发现好用的安卓应用</p>
+								<p class="price">免费</p>
+								<div class="img"><a href=""><img src="img/xia/3/4.png" alt=""></a></div>
+							</li>
+							<div class="left"><i class="iconfont">&#xe779;</i></div>
+							<div class="right"><i class="iconfont">&#xe666;</i></div>
+							<div class="dian">
+								<span class="dd dot"></span>
+								<span class="dd"></span>
+								<span class="dd"></span>
+								<span class="dd"></span>
+							</div>
 						</ul>
 					</div>
 				</li>
