--- a/index.html
+++ b/index.html
@@ -53,17 +53,322 @@
 			</div>
 			<div class="nav"><ul class="zi">
 				<li style="width: 117px;float: left;float: padding-right:15px;height: 100%;"></li>
-				<li class="item"><a href="">小米手机</a></li>
-				<li class="item"><a href="">红米</a></li>
-				<li class="item"><a href="">电视</a></li>
-				<li class="item"><a href="">笔记本</a></li>
-				<li class="item"><a href="">盒子</a></li>
+				<li class="item a"><a href="">小米手机</a></li>
+				<li class="item a"><a href="">红米</a></li>
+				<li class="item a"><a href="">电视</a></li>
+				<li class="item a"><a href="">笔记本</a></li>
+				<li class="item a"><a href="">盒子</a></li>
 				<li class="item"><a href="">新品</a></li>
-				<li class="item"><a href="">路由器</a></li>
-				<li class="item"><a href="">智能硬件</a></li>
+				<li class="item a"><a href="">路由器</a></li>
+				<li class="item a"><a href="">智能硬件</a></li>
 				<li class="item"><a href="">服务</a></li>
 				<li class="item"><a href="">社区</a></li>
-			</ul></div>
+			</ul>
+			<div class="navmenu">
+				<div class="container">
+					<ul class="first active">
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/1.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米MIX 2</a></div>
+							<p>3299起</p>
+							<div class="tou"><span>新品</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/2.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Note 3</a></div>
+							<p>1299起</p>
+							<div class="tou"><span>新品</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/3.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米6</a></div>
+							<p>2299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/4.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Max 3</a></div>
+							<p>1299起</p>
+						</li>
+						<li>
+							<div class="img" style="border-right: none;">
+								<a href=""><img src="img/nav/5.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米5X</a></div>
+							<p>1299起</p>
+						</li>
+					</ul>
+					<ul class="first">
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/2/1.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米MIX 2</a></div>
+							<p>3299起</p>
+							<div class="tou"><span>新品</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/2/2.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Note 3</a></div>
+							<p>1299起</p>
+							<div class="tou"><span>新品</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/2/3.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米6</a></div>
+							<p>2299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/2/4.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Max 3</a></div>
+							<p>1299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/2/5.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米5X</a></div>
+							<p>1299起</p>
+						</li>
+						<li>
+							<div class="img" style="border-right: none;">
+								<a href=""><img src="img/nav/2/6.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米5X</a></div>
+							<p>1299起</p>
+						</li>
+					</ul>
+					<ul class="first">
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/3/1.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米MIX 2</a></div>
+							<p>3299起</p>
+							<div class="tou"><span>超薄旗舰</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/3/2.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Note 3</a></div>
+							<p>1299起</p>
+							<div class="tou"><span>热卖</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/3/3.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米6</a></div>
+							<p>2299起</p>
+							<div class="tou"><span>热卖</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/3/4.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Max 3</a></div>
+							<p>1299起</p>
+							<div class="tou"><span>热卖</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/3/5.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米5X</a></div>
+							<p>1299起</p>
+							<div class="tou"><span>热卖</span></div>
+						</li>
+						<li>
+							<div class="img" style="border-right: none;">
+								<a href=""><img src="img/nav/3/6.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米5X</a></div>
+							<p>1299起</p>
+						</li>
+					</ul>
+					<ul class="first">
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/4/1.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米MIX 2</a></div>
+							<p>3299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/4/2.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Note 3</a></div>
+							<p>1299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/4/3.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米6</a></div>
+							<p>2299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/4/4.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Max 3</a></div>
+							<p>1299起</p>
+						</li>
+						<li>
+							<div class="img" style="border-right: none;">
+								<a href=""><img src="img/nav/4/5.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米5X</a></div>
+							<p>1299起</p>
+						</li>
+					</ul>
+					<ul class="first">
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/5/1.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米MIX 2</a></div>
+							<p>3299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/5/2.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Note 3</a></div>
+							<p>1299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/5/3.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米6</a></div>
+							<p>2299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/5/4.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Max 3</a></div>
+							<p>1299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/5/5.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Max 3</a></div>
+							<p>1299起</p>
+						</li>
+						<li>
+							<div class="img" style="border-right: none;">
+								<a href=""><img src="img/nav/5/6.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米5X</a></div>
+							<p>1299起</p>
+						</li>
+					</ul>
+					<ul class="first">
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/6/1.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米MIX 2</a></div>
+							<p>3299起</p>
+							<div class="tou"><span>新品</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/6/2.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Note 3</a></div>
+							<p>1299起</p>
+							<div class="tou"><span>新品</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/6/3.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米6</a></div>
+							<p>2299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/6/4.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Max 3</a></div>
+							<p>1299起</p>
+						</li>
+						<li>
+							<div class="img" style="border-right: none;">
+								<a href=""><img src="img/nav/6/5.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米5X</a></div>
+							<p>1299起</p>
+						</li>
+					</ul>
+					<ul class="first">
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/7/1.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米MIX 2</a></div>
+							<p>3299起</p>
+							<div class="tou"><span>新品</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/7/2.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Note 3</a></div>
+							<p>1299起</p>
+							<div class="tou"><span>新品</span></div>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/7/3.png" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米6</a></div>
+							<p>2299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/7/4.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Max 3</a></div>
+							<p>1299起</p>
+						</li>
+						<li>
+							<div class="img">
+								<a href=""><img src="img/nav/7/5.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米Max 3</a></div>
+							<p>1299起</p>
+						</li>
+						<li>
+							<div class="img" style="border-right: none;">
+								<a href=""><img src="img/nav/7/6.jpg" alt=""></a>
+							</div>
+							<div class="title"><a href="">小米5X</a></div>
+							<p>1299起</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 			<div class="sousuo">
 				<input type="search" name="keyword" class="search-text" >
 				<input type="submit" name="iconfont" class="iconfont" value="&#xe627;">
@@ -73,6 +378,310 @@
 				</div>
 			</div>
 		</div>
+		<!-- <div class="navmenu">
+			<div class="container">
+				<ul class="first active">
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/1.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米MIX 2</a></div>
+						<p>3299起</p>
+						<div class="tou"><span>新品</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/2.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Note 3</a></div>
+						<p>1299起</p>
+						<div class="tou"><span>新品</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/3.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米6</a></div>
+						<p>2299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/4.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Max 3</a></div>
+						<p>1299起</p>
+					</li>
+					<li>
+						<div class="img" style="border-right: none;">
+							<a href=""><img src="img/nav/5.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米5X</a></div>
+						<p>1299起</p>
+					</li>
+				</ul>
+				<ul class="first">
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/2/1.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米MIX 2</a></div>
+						<p>3299起</p>
+						<div class="tou"><span>新品</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/2/2.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Note 3</a></div>
+						<p>1299起</p>
+						<div class="tou"><span>新品</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/2/3.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米6</a></div>
+						<p>2299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/2/4.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Max 3</a></div>
+						<p>1299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/2/5.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米5X</a></div>
+						<p>1299起</p>
+					</li>
+					<li>
+						<div class="img" style="border-right: none;">
+							<a href=""><img src="img/nav/2/6.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米5X</a></div>
+						<p>1299起</p>
+					</li>
+				</ul>
+				<ul class="first">
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/3/1.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米MIX 2</a></div>
+						<p>3299起</p>
+						<div class="tou"><span>超薄旗舰</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/3/2.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Note 3</a></div>
+						<p>1299起</p>
+						<div class="tou"><span>热卖</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/3/3.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米6</a></div>
+						<p>2299起</p>
+						<div class="tou"><span>热卖</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/3/4.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Max 3</a></div>
+						<p>1299起</p>
+						<div class="tou"><span>热卖</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/3/5.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米5X</a></div>
+						<p>1299起</p>
+						<div class="tou"><span>热卖</span></div>
+					</li>
+					<li>
+						<div class="img" style="border-right: none;">
+							<a href=""><img src="img/nav/3/6.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米5X</a></div>
+						<p>1299起</p>
+					</li>
+				</ul>
+				<ul class="first">
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/4/1.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米MIX 2</a></div>
+						<p>3299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/4/2.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Note 3</a></div>
+						<p>1299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/4/3.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米6</a></div>
+						<p>2299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/4/4.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Max 3</a></div>
+						<p>1299起</p>
+					</li>
+					<li>
+						<div class="img" style="border-right: none;">
+							<a href=""><img src="img/nav/4/5.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米5X</a></div>
+						<p>1299起</p>
+					</li>
+				</ul>
+				<ul class="first">
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/5/1.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米MIX 2</a></div>
+						<p>3299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/5/2.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Note 3</a></div>
+						<p>1299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/5/3.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米6</a></div>
+						<p>2299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/5/4.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Max 3</a></div>
+						<p>1299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/5/5.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Max 3</a></div>
+						<p>1299起</p>
+					</li>
+					<li>
+						<div class="img" style="border-right: none;">
+							<a href=""><img src="img/nav/5/6.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米5X</a></div>
+						<p>1299起</p>
+					</li>
+				</ul>
+				<ul class="first">
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/6/1.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米MIX 2</a></div>
+						<p>3299起</p>
+						<div class="tou"><span>新品</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/6/2.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Note 3</a></div>
+						<p>1299起</p>
+						<div class="tou"><span>新品</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/6/3.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米6</a></div>
+						<p>2299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/6/4.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Max 3</a></div>
+						<p>1299起</p>
+					</li>
+					<li>
+						<div class="img" style="border-right: none;">
+							<a href=""><img src="img/nav/6/5.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米5X</a></div>
+						<p>1299起</p>
+					</li>
+				</ul>
+				<ul class="first">
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/7/1.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米MIX 2</a></div>
+						<p>3299起</p>
+						<div class="tou"><span>新品</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/7/2.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Note 3</a></div>
+						<p>1299起</p>
+						<div class="tou"><span>新品</span></div>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/7/3.png" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米6</a></div>
+						<p>2299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/7/4.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Max 3</a></div>
+						<p>1299起</p>
+					</li>
+					<li>
+						<div class="img">
+							<a href=""><img src="img/nav/7/5.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米Max 3</a></div>
+						<p>1299起</p>
+					</li>
+					<li>
+						<div class="img" style="border-right: none;">
+							<a href=""><img src="img/nav/7/6.jpg" alt=""></a>
+						</div>
+						<div class="title"><a href="">小米5X</a></div>
+						<p>1299起</p>
+					</li>
+				</ul>
+			</div>
+		</div> -->
 	</nav>
 <!-- banner -->
 	<div class="banner"><div class="container">
@@ -1970,4 +2579,5 @@
 		</div></div>
 	</div>
 </body>
+<script type="text/javascript" src="js/animate.js"></script>
 </html>
