--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<script type="text/javascript" src="js/index.js"></script>
 	<link rel="stylesheet" type="text/css" href="https:///at.alicdn.com/t/font_556421_uk4mp3e2ifkzkt9.css">
+	<script type="text/javascript" src="js/animate.js"></script>
 </head>
 <body>
 <!-- header -->
@@ -53,14 +54,14 @@
 			</div>
 			<div class="nav"><ul class="zi">
 				<li style="width: 117px;float: left;float: padding-right:15px;height: 100%;"></li>
-				<li class="item a"><a href="">小米手机</a></li>
-				<li class="item a"><a href="">红米</a></li>
-				<li class="item a"><a href="">电视</a></li>
-				<li class="item a"><a href="">笔记本</a></li>
-				<li class="item a"><a href="">盒子</a></li>
+				<li class="item ho"><a href="">小米手机</a></li>
+				<li class="item ho"><a href="">红米</a></li>
+				<li class="item ho"><a href="">电视</a></li>
+				<li class="item ho"><a href="">笔记本</a></li>
+				<li class="item ho"><a href="">盒子</a></li>
 				<li class="item"><a href="">新品</a></li>
-				<li class="item a"><a href="">路由器</a></li>
-				<li class="item a"><a href="">智能硬件</a></li>
+				<li class="item ho"><a href="">路由器</a></li>
+				<li class="item ho"><a href="">智能硬件</a></li>
 				<li class="item"><a href="">服务</a></li>
 				<li class="item"><a href="">社区</a></li>
 			</ul>
@@ -1909,101 +1910,103 @@
 		
 	</div></div>
 <!-- danpin -->
-	<div class="dan"><div class="container">
-		<div class="title">
-			<h2>小米明星单品</h2>
-			<div class="more">
-				<a href="javascript:;" class="iconfont a">&#xe779;</a>
-				<a href="javascript:;" class="iconfont b">&#xe666;</a>
+	<div class="dan">
+		<div class="container">
+			<div class="title">
+				<h2>小米明星单品</h2>
+				<div class="more">
+					<a href="javascript:;" class="iconfont active a">&#xe779;</a>
+					<a href="javascript:;" class="iconfont b">&#xe666;</a>
+				</div>
+			</div>
+			<div class="dan_bd">
+				<ul class="box1 xian">
+					<li class="item" style="border-top: 1px solid #FFAC13;">
+						<a href="" class="img"><img src="img/d/1.png" alt=""></a>
+						<h3><a href="" class="title">小米手环3</a></h3>
+						<p class="desc">
+							全面屏2.0，5.99"大屏
+						</p>
+						<p class="price">3299元起</p>
+					</li>
+					<li class="item" style="border-top: 1px solid #83C44E;">
+						<a href="" class="img"><img src="img/d/2.png" alt=""></a>
+						<h3><a href="" class="title">红米5A</a></h3>
+						<p class="desc">
+							8天超长待机，137g轻巧机身
+						</p>
+						<p class="price">599元</p>
+					</li>
+					<li class="item" style="border-top: 1px solid #2196F3;">
+						<a href="" class="img"><img src="img/d/3.png" alt=""></a>
+						<h3><a href="" class="title">小米6</a></h3>
+						<p class="desc">
+							变焦双摄，4 轴防抖
+						</p>
+						<p class="price">2299元起</p>
+					</li>
+					<li class="item" style="border-top: 1px solid #E53935;">
+						<a href="" class="img"><img src="img/d/4.png" alt=""></a>
+						<h3><a href="" class="title">小米手环3</a></h3>
+						<p class="desc">
+							全高清HDR  四核高性能处理器 
+						</p>
+						<p class="price">1999元</p>
+					</li>
+					<li class="item hou" style="border-top: 1px solid #00C0A5;">
+						<a href="" class="img"><img src="img/d/5.png" alt=""></a>
+						<h3><a href="" class="title">小米手环3</a></h3>
+						<p class="desc">
+							更轻更薄，像杂志一样随身携带
+						</p>
+						<p class="price">3599元起</p>
+					</li>
+				</ul>
+				<ul class="box1">
+					<li class="item" style="border-top: 1px solid #FFAC13;">
+						<a href="" class="img"><img src="img/d/6.png" alt=""></a>
+						<h3><a href="" class="title">小米手环3</a></h3>
+						<p class="desc">
+							全面屏2.0，5.99"大屏
+						</p>
+						<p class="price">3299元起</p>
+					</li>
+					<li class="item" style="border-top: 1px solid #83C44E;">
+						<a href="" class="img"><img src="img/d/7.jpg" alt=""></a>
+						<h3><a href="" class="title">红米5A</a></h3>
+						<p class="desc">
+							8天超长待机，137g轻巧机身
+						</p>
+						<p class="price">599元</p>
+					</li>
+					<li class="item" style="border-top: 1px solid #2196F3;">
+						<a href="" class="img"><img src="img/d/8.png" alt=""></a>
+						<h3><a href="" class="title">小米6</a></h3>
+						<p class="desc">
+							变焦双摄，4 轴防抖
+						</p>
+						<p class="price">2299元起</p>
+					</li>
+					<li class="item" style="border-top: 1px solid #E53935;">
+						<a href="" class="img"><img src="img/d/9.png" alt=""></a>
+						<h3><a href="" class="title">小米手环3</a></h3>
+						<p class="desc">
+							全高清HDR  四核高性能处理器 
+						</p>
+						<p class="price">1999元</p>
+					</li>
+					<li class="item hou" style="border-top: 1px solid #00C0A5;">
+						<a href="" class="img"><img src="img/d/10.png" alt=""></a>
+						<h3><a href="" class="title">小米手环3</a></h3>
+						<p class="desc">
+							更轻更薄，像杂志一样随身携带
+						</p>
+						<p class="price">3599元起</p>
+					</li>
+				</ul>
 			</div>
 		</div>
-		<div class="dan_bd">
-			<ul class="box1 xian">
-				<li class="item" style="border-top: 1px solid #FFAC13;">
-					<a href="" class="img"><img src="img/d/1.png" alt=""></a>
-					<h3><a href="" class="title">小米手环3</a></h3>
-					<p class="desc">
-						全面屏2.0，5.99"大屏
-					</p>
-					<p class="price">3299元起</p>
-				</li>
-				<li class="item" style="border-top: 1px solid #83C44E;">
-					<a href="" class="img"><img src="img/d/2.png" alt=""></a>
-					<h3><a href="" class="title">红米5A</a></h3>
-					<p class="desc">
-						8天超长待机，137g轻巧机身
-					</p>
-					<p class="price">599元</p>
-				</li>
-				<li class="item" style="border-top: 1px solid #2196F3;">
-					<a href="" class="img"><img src="img/d/3.png" alt=""></a>
-					<h3><a href="" class="title">小米6</a></h3>
-					<p class="desc">
-						变焦双摄，4 轴防抖
-					</p>
-					<p class="price">2299元起</p>
-				</li>
-				<li class="item" style="border-top: 1px solid #E53935;">
-					<a href="" class="img"><img src="img/d/4.png" alt=""></a>
-					<h3><a href="" class="title">小米手环3</a></h3>
-					<p class="desc">
-						全高清HDR  四核高性能处理器 
-					</p>
-					<p class="price">1999元</p>
-				</li>
-				<li class="item hou" style="border-top: 1px solid #00C0A5;">
-					<a href="" class="img"><img src="img/d/5.png" alt=""></a>
-					<h3><a href="" class="title">小米手环3</a></h3>
-					<p class="desc">
-						更轻更薄，像杂志一样随身携带
-					</p>
-					<p class="price">3599元起</p>
-				</li>
-			</ul>
-			<ul class="box1">
-				<li class="item" style="border-top: 1px solid #FFAC13;">
-					<a href="" class="img"><img src="img/d/6.png" alt=""></a>
-					<h3><a href="" class="title">小米手环3</a></h3>
-					<p class="desc">
-						全面屏2.0，5.99"大屏
-					</p>
-					<p class="price">3299元起</p>
-				</li>
-				<li class="item" style="border-top: 1px solid #83C44E;">
-					<a href="" class="img"><img src="img/d/7.jpg" alt=""></a>
-					<h3><a href="" class="title">红米5A</a></h3>
-					<p class="desc">
-						8天超长待机，137g轻巧机身
-					</p>
-					<p class="price">599元</p>
-				</li>
-				<li class="item" style="border-top: 1px solid #2196F3;">
-					<a href="" class="img"><img src="img/d/8.png" alt=""></a>
-					<h3><a href="" class="title">小米6</a></h3>
-					<p class="desc">
-						变焦双摄，4 轴防抖
-					</p>
-					<p class="price">2299元起</p>
-				</li>
-				<li class="item" style="border-top: 1px solid #E53935;">
-					<a href="" class="img"><img src="img/d/9.png" alt=""></a>
-					<h3><a href="" class="title">小米手环3</a></h3>
-					<p class="desc">
-						全高清HDR  四核高性能处理器 
-					</p>
-					<p class="price">1999元</p>
-				</li>
-				<li class="item hou" style="border-top: 1px solid #00C0A5;">
-					<a href="" class="img"><img src="img/d/10.png" alt=""></a>
-					<h3><a href="" class="title">小米手环3</a></h3>
-					<p class="desc">
-						更轻更薄，像杂志一样随身携带
-					</p>
-					<p class="price">3599元起</p>
-				</li>
-			</ul>
-		</div>
-	</div></div>
+	</div>
 <!-- home -->
 	<div class="home">
 		<div class="container">
@@ -2419,8 +2422,60 @@
 			</div>
 		</div>
 	</div>
+<!-- 为你推荐 -->
+	<div class="dan recommend">
+		<div class="container">
+			<div class="title">
+				<h2>小米明星单品</h2>
+			</div>
+			<div class="dan_bd">
+				<ul class="box1 xian">
+					<li class="item">
+						<a href="" class="img"><img src="img/re/1.jpg" alt=""></a>
+						<h3><a href="" class="title">小米手环3</a></h3>
+						<p class="desc">
+							全面屏2.0，5.99"大屏
+						</p>
+						<p class="price">3299元起</p>
+					</li>
+					<li class="item">
+						<a href="" class="img"><img src="img/re/2.jpg" alt=""></a>
+						<h3><a href="" class="title">红米5A</a></h3>
+						<p class="desc">
+							8天超长待机，137g轻巧机身
+						</p>
+						<p class="price">599元</p>
+					</li>
+					<li class="item">
+						<a href="" class="img"><img src="img/re/3.jpg" alt=""></a>
+						<h3><a href="" class="title">小米6</a></h3>
+						<p class="desc">
+							变焦双摄，4 轴防抖
+						</p>
+						<p class="price">2299元起</p>
+					</li>
+					<li class="item">
+						<a href="" class="img"><img src="img/re/4.jpg" alt=""></a>
+						<h3><a href="" class="title">小米手环3</a></h3>
+						<p class="desc">
+							全高清HDR  四核高性能处理器 
+						</p>
+						<p class="price">1999元</p>
+					</li>
+					<li class="item hou">
+						<a href="" class="img"><img src="img/re/5.jpg" alt=""></a>
+						<h3><a href="" class="title">小米手环3</a></h3>
+						<p class="desc">
+							更轻更薄，像杂志一样随身携带
+						</p>
+						<p class="price">3599元起</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
 <!-- 好多轮播 -->
-	<div class="many"><div class="container">
+	<div class="many" style="background: #F5F5F5;margin: 0;padding-bottom: 44px;"><div class="container">
 		<div class="title">
 			<h2>内容</h2>
 		</div>
@@ -2578,6 +2633,91 @@
 			</ul>
 		</div></div>
 	</div>
+<!-- footer -->
+	<footer><div class="container">
+		<div class="title">
+			<ul class="service">
+				<li style="border-left: none;"><a href=""><i class="iconfont">&#xe62e;</i>预约维修服务</a></li>
+				<li><a href=""><i class="iconfont">&#xe691;</i>预约维修服务</a></li>
+				<li><a href=""><i class="iconfont">&#xe606;</i>预约维修服务</a></li>
+				<li><a href=""><i class="iconfont">&#xe612;</i>预约维修服务</a></li>
+				<li><a href=""><i class="iconfont">&#xe613;</i>预约维修服务</a></li>
+			</ul>
+		</div>
+		<div class="bottom">
+			<dl>
+				<dt>服务特色</dt>
+				<dd><a href="">F码通道</a></dd>
+				<dd><a href="">礼物吗<</a>/dd>
+				<dd><a href="">防伪查询</a></dd>
+			</dl>
+			<dl>
+				<dt>帮助中心</dt>
+				<dd><a href="">账户管理</a></dd>
+				<dd><a href="">购物指南</a></dd>
+				<dd><a href="">订单操作</a></dd>
+			</dl>
+			<dl>
+				<dt>关注我们</dt>
+				<dd><a href="">售后服务</a></dd>
+				<dd><a href="">自助服务</a></dd>
+				<dd><a href="">相关下载</a></dd>
+			</dl>
+			<dl>
+				<dt>线下门店</dt>
+				<dd><a href="">小米之家</a></dd>
+				<dd><a href="">服务网点</a></dd>
+				<dd><a href="">零售网店</a></dd>
+			</dl>
+			<dl>
+				<dt>关于小米</dt>
+				<dd><a href="">了解小米</a></dd>
+				<dd><a href="">加入小米</a></dd>
+				<dd><a href="">联系我们</a></dd>
+			</dl>
+			<dl>
+				<dt>关注我们</dt>
+				<dd><a href="">新浪微博</a></dd>
+				<dd><a href="">小米部落</a></dd>
+				<dd><a href="">官方微信</a></dd>
+			</dl>
+			<div class="col">
+				<p class="phone">400-100-5678</p>
+				<p class="er">
+					周一至周日 8:00-18:00<br>（仅收市话费）</br>
+				</p>
+				<a href=""><i class="iconfont">&#xe649;</i>24小时在线客服</a>
+			</div>
+		</div>
+		<div class="site">
+			<div class="left"><a href=""><img src="img/1.png" alt=""></a></div>
+			<div class="zhong">
+				<p class="name"><a href="">小米商城</a><span>|</span>
+					<a href="">MIUI</a><span>|</span>
+					<a href="">米家</a><span>|</span>
+					<a href="">米聊</a><span>|</span>
+					<a href="">多看</a><span>|</span>
+					<a href="">路由器</a><span>|</span>
+					<a href="">米粉卡</a><span>|</span>
+					<a href="">小米天猫店</a><span>|</span>
+					<a href="">隐私政策</a><span>|</span>
+					<a href="">问题反馈</a><span>|</span>
+					<a href="">Select Region</a></p>
+					<p class="desc">
+						@<a href="">mi.com</a>京ICP证110507号 <a href="">京ICP备10046444号</a> <a href="">京公网安备11010802020134号</a> <a href="">京网文[2014]0059-0009号 </a>违法和不良信息举报电话：185-0130-1238，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试
+					</p>
+			</div>
+			<div class="right">
+				<ul>
+					<li><a href=""><img src="img/footer/1.png" alt=""></a></li>
+					<li><a href=""><img src="img/footer/2.png" alt=""></a></li>
+					<li><a href=""><img src="img/footer/3.png" alt=""></a></li>
+					<li><a href=""><img src="img/footer/4.png" alt=""></a></li>
+					<li><a href=""><img src="img/footer/5.png" alt=""></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</footer>
 </body>
-<script type="text/javascript" src="js/animate.js"></script>
 </html>
